# htb

./: Cargo.toml
doc/: design.md  render.md
src/: main.rs
src/htb/: event.rs  menu.rs  mod.rs  pages.rs  render.rs
src/htb/render/: mod.rs  res.rs  resource.rs  scene.rs
src/htb/render/res/: mod.rs  store.rs
src/htb/view/: game.rs  mod.rs
src/htb/view/menu/: mod.rs  model.rs
src/menu/: mod.rs  model.rs  view.rs
src/view/: menu.rs  mod.rs
