[package]
name = "htb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
raw-window-handle = "0.4.2"
wgpu = "0.12.0"
log = "0.4.14"
env_logger = "0.9.0"
glam = "0.20.2"
pollster = "0.2.5"
bytemuck = "1.7.3"
anyhow = "1.0.55"
thiserror = "1.0.30"
dotenv = "0.15.0"
once_cell = "1.10.0"