[package]
name = "htb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"
raw-window-handle = "0.5"
wgpu = "0.13"
log = "0.4"
env_logger = "0.9"
glam = "0.21"
pollster = "0.2"
bytemuck = "1.10"
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
once_cell = "1.13"
rayon = "1.5"
subranges = "0.3"
dashmap = "5.3"
num = "0.4"